	Removed, applied upstream.
	* Makefile.am: Remove unneeded patches, fix
	remaining conflicts from merge, make overlay
	depend on patch stage.
	* patches/hotspot/original/icedtea-format.patch:
	to here.
	* patches/icedtea-doc-headers.patch,
	* patches/icedtea-nio2.patch: Recreated against 7.
	* patches/icedtea-pr261.patch,
	* patches/icedtea-version.patch: Regenerated.

2009-02-11  Marc Schoenefeld <mschoene@redhat.com>
            Omair Majid  <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	(write): Fix bounds checking.
	
2009-02-10  Deepak Bhole <dbhole@redhat.com>
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Fix
	exit permissions for applets.
	* plugin/icedtea/sun/applet/PluginStreamHandler.java: Fix harmless, but
	annoying OOB exception on browser exit.
	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java: Add function to
	'always' disable exit.
	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Same, and
	update support in checkPermission() for exit permissions.

2009-02-10  Andrew John Hughes  <ahughes@redhat.com>

	Merge from IcedTea6.
	* patches/ecj/icedtea-pr261.patch: Merged.
	* patches/icedtea-visualvm.patch: Dropped.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMuteControl.java,
	* visualvm.desktop,
	* .hgtags,
	* ChangeLog,
	* HACKING,
	* INSTALL,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* NEWS,
	* README,
	* acinclude.m4,
	* configure.ac,
	* generated/sun/nio/ch/SocketOptionRegistry.java: Merged.
	* overlays/nio2/openjdk/jdk/make/mkdemo/nio/Makefile,
	* overlays/nio2/openjdk/jdk/make/mkdemo/nio/ZipFileSystem/Makefile,
	* overlays/nio2/openjdk/jdk/make/mksample/nio/aio/Makefile,
	* overlays/nio2/openjdk/jdk/make/mksample/nio/file/Makefile,
	* overlays/nio2/openjdk/jdk/src/share/classes/com/sun/nio/file/ExtendedCopyOption.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/com/sun/nio/file/ExtendedOpenOption.java,